1. jQuery conflict issue fixed 2. Russian po file added 3. Update to version 1.0.1
git-svn-id: https://plugins.svn.wordpress.org/estatik/trunk@1131182 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/front_templates/css/es_front_style.css
+++ b/front_templates/css/es_front_style.css
@@ -683,6 +683,8 @@ a#es_content .es_more_props_btn,
 
 #es_content .es_prop_single_basic_info ul li{ padding-bottom:4px; }
 
+#es_content .es_prop_single_basic_info ul li:after{ content:""; clear:both; display:block; height:0; }
+
 #es_content .es_prop_single_basic_info ul li strong, #es_content .es_prop_single_basic_info ul li span{ text-transform:capitalize; float:left; width:50%; font-size:16px; }
 
 #es_content .es_prop_single_basic_info ul li strong{ font-weight:700;  }
